# ml-for-spectro

./: README.md  environment.yml
PtyIm_gui/: load_tab.py  main.py  pyproject.toml  viewer.py
PtyIm_gui/PtyIm_gui/: fourier_tab.py  load_tab.py  main.py  viewer.py
PtyIm_gui/utils/: __init__.py
XPS_gui/: pyproject.toml
XPS_gui/XPS_curvefit/: Readme.md  config.py  help_text.txt  main.py  requirements.txt
XPS_gui/logs/: log_2025-05-03_23-44-53.txt  log_2025-05-04_00-09-02.txt  log_2025-05-04_09-50-33.txt  log_2025-05-04_09-57-08.txt  log_2025-05-04_10-02-03.txt  log_2025-05-04_10-04-23.txt  log_2025-05-04_10-25-11.txt  log_2025-05-04_11-17-57.txt  log_2025-05-04_11-20-21.txt  log_2025-05-04_12-14-24.txt  log_2025-05-04_12-21-30.txt  log_2025-05-04_12-26-00.txt  log_2025-05-04_18-14-37.txt  log_2025-05-04_18-17-30.txt  log_2025-05-04_18-45-29.txt  log_2025-05-04_21-20-52.txt  log_2025-05-04_21-52-31.txt  log_2025-05-04_21-58-00.txt  log_2025-05-04_22-10-53.txt  log_2025-05-04_22-13-41.txt  log_2025-05-04_22-14-36.txt  log_2025-05-04_22-16-28.txt  log_2025-05-04_22-26-53.txt  log_2025-05-04_22-27-29.txt  log_2025-05-04_22-31-25.txt  log_2025-05-04_22-32-37.txt  log_2025-05-04_22-38-41.txt  log_2025-05-04_22-44-57.txt  log_2025-05-04_22-50-10.txt  log_2025-05-04_22-51-51.txt  log_2025-05-04_22-58-09.txt  log_2025-05-05_06-29-17.txt  log_2025-05-05_06-31-10.txt  log_2025-05-05_06-34-30.txt  log_2025-05-12_15-38-14.txt  log_2025-05-12_15-44-38.txt  log_2025-05-12_15-50-09.txt  log_2025-05-12_15-53-56.txt  (+67 more)
frc_analyzer/: README.md  frc_gui.py  pyproject.toml
(+170 files in other folders)
