[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xps-curvefit"
version = "0.1"
description = "A simple XPS analysis tool with smoothing, background, and peak fitting."
authors = [{ name = "Your Name" }]
dependencies = [
    "PySide6",
    "numpy",
    "matplotlib"
]

[project.scripts]
xps-curvefit = "XPS_curvefit.main:main"

[tool.setuptools.packages.find]
where = ["."]
